@@ -6,6 +6,11 @@
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+	[07/2024]
+	One paper (Video Localization) is accepted to <a href="https://cikm2024.org/">CIKM 2024</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
 	[06/2024]
 	One paper (Speaker Identification) is accepted to <a href="https://interspeech2024.org/">INTERSPEECH 2024</a>.
   </li>
